--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,10 @@ table {
     border-spacing: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
 button, input[type="submit"], input[type="reset"] {
     background: none;
     color: inherit;
