--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -1,10 +1,18 @@
 .card {
-  flex: 1;
   cursor: pointer;
-  margin-left: 1rem;
-  margin-top: 1rem;
+  margin-bottom: 1rem;
+  width: 100%;
+
 
   position: relative;
+
+
+  @media screen and (min-width: 600px) {
+    margin-left: 1%;
+    &:nth-child(1) {
+      margin-left: 0;
+    }
+  }
 
   &:hover .hide {
     visibility: visible;
@@ -12,7 +20,7 @@
 
   &:hover .fade {
     background-color: #00001900;
-    opacity: .5;
+    opacity: .4;
 
   }
 
@@ -27,11 +35,15 @@
 
   &__image-container {
     overflow: hidden;
-    background-color: #000000;
+    height: 50vh;
+    min-height: 14rem;
+    background-color: black;
 
     &--image {
+      height: 50vh;
+      min-height: 14rem;
       width: 100%;
-      align-self: start ;
+      object-fit: cover;
     }
   }
 
