--- a/src/components/cards/cards.styles.scss
+++ b/src/components/cards/cards.styles.scss
@@ -5,11 +5,10 @@
   justify-content: center;
   align-content: center;
 
-  min-height: 12rem;
-  overflow: hidden;
+  flex-wrap: wrap;
 
-    @media screen and (min-width: 1250px) {
-      flex-direction: row;
-      height: 12rem;
-    }
+
+  @media screen and (min-width: 600px) {
+    flex-direction: row;
+  }
 }
