--- a/src/components/modal/modal.styles.scss
+++ b/src/components/modal/modal.styles.scss
@@ -3,14 +3,16 @@
   left: 0;
   top: 0;
   z-index: 10;
+  height: 100%;
+  width: 100%;
 
   &--background {
     position: absolute;
     background-color: #cacacaaa;
     left: 0;
     top: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     z-index: -1;
     backdrop-filter: blur(.4rem);
   }
