--- a/src/page/sign-in-or-sign-up/sign-up-or-sign-in.styles.scss
+++ b/src/page/sign-in-or-sign-up/sign-up-or-sign-in.styles.scss
@@ -2,11 +2,12 @@
 .sign-up {
 
   position: absolute;
+  display: flex;
+  flex-direction: column;
 
   top: 4rem;
   left: 5vw;
   width: 90vw;
-  min-height: 50%;
 
   padding: 1rem;
 
@@ -14,10 +15,11 @@
 
   box-shadow: #909090aa 0px 10px 36px 0px, #9090900c 0px 0px 0px 1px;
 
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
 
+  @media screen and (min-width: 800px) {
+    width: 15rem;
+    left: calc(50% - (15rem / 2));
+  }
 
   &--title {
     font-size: 1rem;
@@ -55,6 +57,15 @@
     font-size: 1rem;
     text-align: center;
     right: 1rem;
+  }
+
+  &--status {
+    color: red;
+    font-size: .8rem;
+    &--hidden {
+      visibility: hidden;
+      display: none;
+    }
   }
 
 }
