--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,18 +1,16 @@
 .cart-dropdown {
   top: 2.2rem;
   right: 0;
-  max-height: 8rem;
   position: absolute;
   width: 15rem;
   padding: .5rem;
 
-  display: flex;
-  flex-direction: column;
-
-  background: linear-gradient(to right bottom, #cfcfcfdd, #cfcfcf99);
+  background: #cfcfcf;
   box-shadow: #00000020 0 .5rem 2rem 0;
 
-  &__cart-items {
 
+  &__cart-items {
+    max-height: 70vh;
+    overflow-y: scroll;
   }
 }
