--- a/src/page/collection/collection.styles.scss
+++ b/src/page/collection/collection.styles.scss
@@ -1,35 +1,23 @@
 .collection {
-  min-height: calc(100vh - 5rem);
-  margin-top: 5rem;
-  &--title {
-    color: white;
-    margin-left: 5vw;
-    margin-bottom: 1vw;
-    position: relative;
-    z-index: 3;
+  &-title {
+
   }
-
-  &__all-categories {
-    display: flex;
-    color: white;
-    width: 90vw;
-    margin-left: 5vw;
-    z-index: 3;
-    position: relative;
-
-    &--category {
-      margin-right: .5rem;
-    }
-  }
-
   &__container {
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    width: 90vw;
-    left: 5vw;
+    display: grid;
+    grid-template-columns: auto;
+    grid-column-gap: 1rem;
+
+    @media screen and (min-width: 600px) {
+      grid-template-columns: auto auto;
+    }
+
+    @media screen and (min-width: 1200px) {
+      grid-template-columns: auto auto auto auto;
+    }
+
+    & > * {
+
+    }
 
   }
-
 }
