--- a/src/page/checkout/checkout.styles.scss
+++ b/src/page/checkout/checkout.styles.scss
@@ -1,7 +1,5 @@
 .checkout-page {
   min-height: 100%;
-  justify-content: center;
-  align-items: center;
   width: 80%;
   margin: 4rem 10%;
   &__header {
@@ -14,12 +12,17 @@
   }
 
   &__items {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: auto ;
 
   }
 
   &__total {
     color: white;
+  }
+
+  &__test-warning {
+    padding: 1em 0;
+    color: red;
   }
 }
