--- a/src/components/modal/modal.styles.scss
+++ b/src/components/modal/modal.styles.scss
@@ -1,3 +1,5 @@
+@import '../../styles-variables/variables';
+
 .modal {
   position: fixed;
   left: 0;
@@ -8,12 +10,12 @@
 
   &--background {
     position: absolute;
-    background-color: #cacacaaa;
+    background-color: $base-color-t-pop;
     left: 0;
     top: 0;
     height: 100%;
     width: 100%;
     z-index: -1;
-    backdrop-filter: blur(.4rem);
+    backdrop-filter: blur(.2rem);
   }
 }
