--- a/src/page/collection/collection.styles.scss
+++ b/src/page/collection/collection.styles.scss
@@ -2,6 +2,10 @@
   &-title {
 
   }
+
+  &__go-back {
+    padding: 1rem 0;
+  }
   &__container {
     display: grid;
     grid-template-columns: auto;
