--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import './styles-variables/variables.scss';
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -37,6 +39,7 @@ html {
 
 body {
     line-height: 1;
+    background-color: $base-color;
 }
 ol, ul {
     list-style: none;
@@ -64,4 +67,22 @@ button, input[type="submit"], input[type="reset"] {
     padding: 0;
     cursor: pointer;
     outline: inherit;
+}
+
+.cover {
+    &--image {
+        transition: .4s;
+        top: 0;
+        position: fixed;
+        z-index: -10;
+        min-width: 100%;
+        min-height: 100%;
+        opacity: 0;
+
+        &--visible {
+            opacity: 1;
+
+        }
+    }
+
 }
