--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -1,46 +1,34 @@
+@import '../../styles-variables/variables';
+
 .card {
   cursor: pointer;
   margin-bottom: 1rem;
-  width: 100%;
-
 
   position: relative;
 
-
-  @media screen and (min-width: 600px) {
-    margin-left: 1%;
-    &:nth-child(1) {
-      margin-left: 0;
-    }
-  }
 
   &:hover .hide {
     visibility: visible;
   }
 
   &:hover .fade {
-    background-color: #00001900;
+    background-color: $base-color-pop;
     opacity: .4;
 
   }
 
   &__image-container {
-    overflow: hidden;
-    height: 50vh;
-    min-height: 14rem;
-    background-color: black;
-
     &--image {
-      height: 50vh;
-      min-height: 14rem;
-      width: 100%;
+      min-width: 100%;
+      max-width: 100%;
+      max-height: 8rem;
       object-fit: cover;
     }
   }
 
   &__description {
     position: absolute;
-    color: white;
+    color: $common-text-color;
     left: 10%;
     top: 1rem;
   }
