--- a/src/components/cta-button/cta-button-styles.scss
+++ b/src/components/cta-button/cta-button-styles.scss
@@ -1,3 +1,5 @@
+@import '../../styles-variables/variables';
+
 .call-to-action {
   max-width: 15rem;
   flex-shrink: 1;
@@ -5,7 +7,10 @@
   font-size: 1rem;
   margin-top: 2rem;
   padding: 1rem;
-  border-radius: 1rem;
-  color: #ffffff;
-  background-color: #113ae9;
+  border-radius: 8px;
+
+  font-weight: bold;
+
+  color: $base-color;
+  background-color: $highlight-color-2;
 }
