--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -2,19 +2,15 @@
 
 .checkout-item {
   & img {
-    max-width: 5rem;
+    max-width: 3rem;
   }
-  margin: .2rem 0;
+
+
   display: grid;
-  grid-template-columns: 40% 30% 15% 15% 5%;
+  grid-template-columns: 30% 30% 15% 15% 10%;
 
-  @media screen and (min-width: 600px) {
-    grid-template-columns: 25% 45% 15% 15% 5%;
-  }
+  margin-bottom: 1rem;
 
-  @media screen and (min-width: 1200px) {
-    grid-template-columns: 15% 35% 15% 15% 5%;
-  }
 
   color: $common-text-color;
 
@@ -22,7 +18,6 @@
   }
 
   &--arrow {
-    padding: 0 .5rem;
     cursor: pointer;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
