--- a/src/page/checkout/checkout.styles.scss
+++ b/src/page/checkout/checkout.styles.scss
@@ -2,8 +2,8 @@
 
 .checkout-page {
   min-height: 100%;
-  width: 80%;
-  margin: 4rem 10%;
+  width: 100%;
+  padding: 4rem 1rem;
   &__header {
     display: flex;
     &__block {
