Changed default opacity for the cover image

--- a/src/App.scss
+++ b/src/App.scss
@@ -80,7 +80,7 @@ button, input[type="submit"], input[type="reset"] {
         opacity: 0;
 
         &--visible {
-            opacity: 1;
+            opacity: .5;
 
         }
     }
