--- a/src/styles-variables/variables.scss
+++ b/src/styles-variables/variables.scss
@@ -1,4 +1,4 @@
-$base-color:        #131f33;
+$base-color: #0a111c;
 $base-color-pop:    #252f3e;
 $base-color-t-pop:  #504E547F;
 $highlight-color:   #A06EF2;
