--- a/src/App.scss
+++ b/src/App.scss
@@ -72,12 +72,19 @@ button, input[type="submit"], input[type="reset"] {
 .cover {
     &--image {
         transition: .4s;
-        top: 0;
-        position: fixed;
         z-index: -10;
         min-width: 100%;
         min-height: 100%;
         opacity: 0;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-40%, -50%);
+
+        @media screen and (min-width: 600px) {
+            transform: translate(-50%, -50%);
+
+        }
 
         &--visible {
             opacity: .5;
