--- a/src/styles-variables/variables.scss
+++ b/src/styles-variables/variables.scss
@@ -3,4 +3,5 @@ $base-color-pop:    #252f3e;
 $base-color-t-pop:  #504E547F;
 $highlight-color:   #A06EF2;
 $highlight-color-2: #f61b60;
+$highlight-color-t-2: #f61b607f;
 $common-text-color: #c4c4c4;
