--- a/src/styles-variables/variables.scss
+++ b/src/styles-variables/variables.scss
@@ -1,5 +1,5 @@
 $base-color: #0b121f;
-$base-color-pop:    #252f3e;
+$base-color-pop: #121818;
 $base-color-t-pop:  #504E547F;
 $highlight-color:   #A06EF2;
 $highlight-color-2: #f61b60;
