--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -18,10 +18,12 @@
   }
 
   &__image-container {
+    height: 100%;
+    overflow: hidden;
     &--image {
       min-width: 100%;
       max-width: 100%;
-      max-height: 10rem;
+      min-height: 100%;
       object-fit: cover;
     }
   }
